Hid overflow on app global selector to fix white space issue

--- a/src/components/buttons/IngredientCatBtn/IngredientCatBtn.module.scss
+++ b/src/components/buttons/IngredientCatBtn/IngredientCatBtn.module.scss
@@ -14,6 +14,8 @@
     font-size: 48px;
     font-weight: 700;
     letter-spacing: 3px;
+    width: 100vw;
+    overflow: hidden;
 
     img {
         filter: drop-shadow(10px 10px 5px rgb(0, 0, 0));
