--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
 
 .app {
   background-color: rgb(134, 131, 131);
+  overflow: hidden;
 }
 
 .page {
